--- a/vanilla/index.html
+++ b/vanilla/index.html
@@ -7,34 +7,24 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="shortcut icon" href="/favicon.ico" />
   <link rel="stylesheet" href="styles.css" />
-  <script type="text/javascript" src="index.js" defer></script>
-  <title>[Nombre de Proyecto]</title>
+  <title>Weather App</title>
 </head>
-
 <body>
   <div class="app">
     <header class="app-header">
-      <h1>[Nombre de Proyecto]</h1>
-      <div >
-        <svg width="520" height="520" viewBox="0 0 520 520" fill="none" xmlns="http://www.w3.org/2000/svg" class="app-logo">
-          <path d="M380.638 408.59L450.838 255.189L380.638 107.856" stroke="#FDFDFD" stroke-width="69.8724"
-            stroke-miterlimit="10" stroke-linecap="round" />
-          <path d="M140.573 107.856L70.373 261.257L140.573 408.59" stroke="#FDFDFD" stroke-width="69.8724"
-            stroke-miterlimit="10" stroke-linecap="round" />
-          <path
-            d="M254.971 202.322C288.771 202.322 315.638 229.188 315.638 262.988C315.638 296.788 288.771 323.655 254.971 323.655C221.171 323.655 194.305 296.788 194.305 262.988C194.305 230.055 222.038 202.322 254.971 202.322Z"
-            fill="#F65435" />
-        </svg>
+      <img width="120px" src="../img/weather-icon-png-8.png" alt="weatherIcon">
+      <h1>Weather App</h1>
+      <div>
+        <form>
+          <h1 class="title">Ingrese la ciudad</h1>
+          <input type="text" id="value"><br>
+          <button id="consButton">Consultar</button>
+        </form>
       </div>
-      <p id="date"></p>
-      <p>
-        Edita <code>index.html</code> o <code>index.js</code>.
-      </p>
-      <a class="app-link" href="https://codealo.dev" target="_blank" rel="noopener noreferrer">
-        Aprende con Codealo
-      </a>
+      <p id="data"></p>
     </header>
   </div>
+  <script src="index.js"></script>
 </body>
 
 </html>
